<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="120dp"
        android:text="@string/login"
        />

    <TextView
        android:id="@+id/txt_view_nome"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="50dp"
        android:text="@string/name"
        />

    <TextView
        android:id="@+id/txt_view_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_view_nome"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/pass"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="268dp" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="167dp"
        android:layout_height="47dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="150dp"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="184dp" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="168dp"
        android:layout_height="47dp"
        android:layout_below="@id/et_nome"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="256dp" />

</RelativeLayout>